// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comscore Analytics Component (AMP) should not render if no tracking IDs are specified 1`] = `Array []`;

exports[`Comscore Analytics Component (AMP) should not render if no tracking IDs are specified 2`] = `null`;

exports[`Comscore Analytics Component (AMP) should render a script for a single tracking ID 1`] = `Array []`;

exports[`Comscore Analytics Component (AMP) should render a script for a single tracking ID 2`] = `
<amp-analytics
  type="comscore"
>
  <script
    dangerouslySetInnerHTML={
      Object {
        "__html": "{\\"vars\\":{\\"c2\\":\\"333333\\"}}",
      }
    }
    type="application/json"
  />
</amp-analytics>
`;

exports[`Comscore Analytics Component (AMP) should render script for all tracking IDs 1`] = `Array []`;

exports[`Comscore Analytics Component (AMP) should render script for all tracking IDs 2`] = `
Array [
  <amp-analytics
    type="comscore"
  >
    <script
      dangerouslySetInnerHTML={
        Object {
          "__html": "{\\"vars\\":{\\"c2\\":\\"111111\\"}}",
        }
      }
      type="application/json"
    />
  </amp-analytics>,
  <amp-analytics
    type="comscore"
  >
    <script
      dangerouslySetInnerHTML={
        Object {
          "__html": "{\\"vars\\":{\\"c2\\":\\"222222\\"}}",
        }
      }
      type="application/json"
    />
  </amp-analytics>,
]
`;

exports[`Comscore Analytics Component should not render if no tracking IDs are specified 1`] = `Array []`;

exports[`Comscore Analytics Component should not render if no tracking IDs are specified 2`] = `Array []`;

exports[`Comscore Analytics Component should render a script for a single tracking ID 1`] = `
Array [
  <script
    async={true}
    data-rh={true}
    src="https://sb.scorecardresearch.com/beacon.js"
  />,
]
`;

exports[`Comscore Analytics Component should render a script for a single tracking ID 2`] = `
Array [
  <noscript
    dangerouslySetInnerHTML={
      Object {
        "__html": "<img alt=\\"comscore\\" src=\\"https://sb.scorecardresearch.com/p?c1=2&c2=333333&cv=2.0&cj=1\\" />",
      }
    }
    data-rh={true}
  />,
]
`;

exports[`Comscore Analytics Component should render script for all tracking IDs 1`] = `
Array [
  <script
    async={true}
    data-rh={true}
    src="https://sb.scorecardresearch.com/beacon.js"
  />,
]
`;

exports[`Comscore Analytics Component should render script for all tracking IDs 2`] = `
Array [
  <noscript
    dangerouslySetInnerHTML={
      Object {
        "__html": "<img alt=\\"comscore\\" src=\\"https://sb.scorecardresearch.com/p?c1=2&c2=111111&cv=2.0&cj=1\\" />",
      }
    }
    data-rh={true}
  />,
  <noscript
    dangerouslySetInnerHTML={
      Object {
        "__html": "<img alt=\\"comscore\\" src=\\"https://sb.scorecardresearch.com/p?c1=2&c2=222222&cv=2.0&cj=1\\" />",
      }
    }
    data-rh={true}
  />,
]
`;
